Fixes the availability new form to be responsive and centered on mobile screens

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-height:600px) {
   max-height: 100vh;
-  .row {
+  .row-banner {
     display: flex;
     flex-wrap: wrap;
   }
